clusters/wrtk8s/tts/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tts
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
